# clinlp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  format-lint.yml  formatting-linting.yml  test.yml
clinlp/: __init__.py  clinlp.py  context.py  entity.py  language.py  ner.py  normalizer.py  qualifier.py  sentencizer.py  tokenize.py  tokenizer.py  util.py  utils.py
clinlp/component/: __init__.py  normalizer.py  qualifier.py  sentencizer.py
clinlp/qualifier/: __init__.py  context_algorithm.py  qualifier.py  rule_based.py  transformer.py
clinlp/resources/: context_rules.json  psynlp_context_rules.json
data/: README.md  mantra_gsc.json  qualifier_cases.json  sentencizer_cases.json  tokenizer_cases.json
docs/: .readthedocs.yaml  conf.py  emojize.py  qualifier_definitions.md  qualifiers.docx  readthedocs.yaml
docs/_templates/: package.rst_t
docs/source/: apps.md  citing.md  components.md  contributing.md  data.md  getting_started.md  index.md  installation.md  introduction.md  metrics.md  qualifiers.md  roadmap.md
docs/source/api/: api.rst
resources/: default_qualifiers.json
scripts/: README.md  check_ca_rules_validity.py  generate_clinlp_docs.py  generate_qualifier_regression_data.py  mantra_gsc.py  mock_context_rules.json
scripts/test_data/: generate_clinlp_docs.py  generate_qualifier_regression_data.py
src/clinlp/: __init__.py  cli.py  entity.py  exceptions.py  language.py  normalizer.py  sentencizer.py  util.py
src/clinlp/ie/: __init__.py  entity.py  term.py
src/clinlp/ie/qualifier/: __init__.py  context_algorithm.py  qualifier.py  transformer.py
src/clinlp/metrics/: __init__.py  ie.py
src/clinlp/qualifier/: qualifier.py
src/clinlp/resources/: __init__.py  context_rules.json
src/clinlp_apps/ie_demo/: README.md  app.py
src/clinlp_apps/ie_demo/resources/: sample_terms.json  sample_text.txt
src/clinlp_apps/ie_demo/src/: __init__.py  controller.py  model.py  utils.py  view.py
src/metrics/: ie.py
tests/: conftest.py  test_nlp.py  test_qualifier.py  test_qualifier_matcher.py  test_sentencizer.py  test_tokenizer.py
tests/data/: clinlp_docs.pickle  concept_examples.csv  medcattrainer_export.json  qualifier_cases.json  qualifier_rules_simple.json  sentencizer_cases.json  tokenizer_cases.json
tests/data/test_spacy_model/vocab/: strings.json
tests/integration/: normalizer.py  test_integration_entity.py  test_integration_normalizer.py  test_integration_qualifier_detector.py  test_integration_qualifier_detectors.py
tests/regression/: __init__.py  test_regression_context_algorithm.py  test_regression_qualifiers.py  test_regression_sentencizer.py  test_regression_tokenizer.py
tests/regression/ie/qualifier/: test_regression_context_algorithm.py  test_regression_transformer.py  test_regression_transformer_experiencer.py  test_regression_transformer_negation.py
tests/regression/qualifier/: test_regression_context_algorithm.py  test_regression_transformer.py  test_regression_transformer_experiencer.py  test_regression_transformer_negation.py
tests/test_data/: clinlp_docs.pickle  qualifier_cases.json  rbem_terms.csv  rbem_terms.json
tests/test_data/test_spacy_model/: config.cfg  meta.json  tokenizer
tests/unit/: test_context_algorithm.py  test_entity.py  test_language.py  test_ner.py  test_nlp.py  test_normalizer.py  test_qualifier.py  test_qualifier_matcher.py  test_sentencizer.py  test_tokenizer.py  test_util.py
tests/unit/ie/: test_entity.py  test_term.py
tests/unit/ie/qualifier/: test_context_algorithm.py  test_qualifier.py  test_transformer.py
tests/unit/metrics/: test_ie.py
tests/unit/qualifier/: test_context_algorithm.py  test_qualifier.py  test_transformer.py
