[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clinlp"
version = "0.9.4"
description = "Performant and production-ready NLP pipelines for clinical text written in Dutch"
readme = "README.md"
authors = [ {name = "UMCU DIT Analytics", email="analytics@umcutrecht.nl"} ]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.7",
  "intervaltree ~= 3.1",
  "makefun ~= 1.15",
  "numpy ~= 2.0",
  "pandas ~= 2.2",
  "pydantic ~= 2.6",
  "spacy ~= 3.8",
]

[project.scripts]
clinlp = "clinlp.cli:cli"

[project.urls]
Documentation = "https://clinlp.readthedocs.io/en/latest/"
Repository = "https://github.com/umcu/clinlp"
Issues = "https://github.com/umcu/clinlp/issues"
Changelog = "https://github.com/umcu/clinlp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
metrics = [
  "nervaluate == 0.1.8",
  "scikit-learn ~= 1.5",
]
transformers = [
    "transformers[torch] ~= 4.30",
]
apps = [
    "dash-bootstrap-components>=1.6.0",
    "dash>=2.18.2",
]

[dependency-groups]
dev = [
  "emoji ~= 2.12",
  "furo ~= 2024.5",
  "myst-parser ~= 4.0",
  "pytest ~= 8.2",
  "pytest-cov ~= 5.0",
  "pytest-xdist ~= 3.6",
  "ruff ~= 0.4",
  "sphinx ~= 8.1",
  "sphinx-new-tab-link ~= 0.4",
  "toml ~= 0.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=clinlp --cov-fail-under=85"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "D", "UP", "ANN", "S",
    "BLE", "FBT", "B", "C4", "EM", "PIE", "T20",
    "PT", "RSE", "RET", "SIM", "ARG", "PTH", "ERA",
    "TRY", "PERF", "RUF"
]
ignore = [
    "ANN002", "ANN003", "ANN101", "ANN102"
]

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["D"]
"tests/*" = ["D", "S", "ANN"]
"scripts/*" = ["D", "T20"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

